--- a/homework/notebook.ipynb
+++ b/homework/notebook.ipynb
@@ -506,7 +506,18 @@
    "execution_count": null,
    "id": "4540cb4c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\ASUS\\Documents\\AAprogramación general\\AANacho\\Predictiva\\PRE-09-selectkbest-para-regresion-dlion7002\\.venv\\Lib\\site-packages\\sklearn\\neural_network\\_multilayer_perceptron.py:781: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (30000) reached and the optimization hasn't converged yet.\n",
+      "  warnings.warn(\n",
+      "c:\\Users\\ASUS\\Documents\\AAprogramación general\\AANacho\\Predictiva\\PRE-09-selectkbest-para-regresion-dlion7002\\.venv\\Lib\\site-packages\\sklearn\\neural_network\\_multilayer_perceptron.py:788: UserWarning: Training interrupted by user.\n",
+      "  warnings.warn(\"Training interrupted by user.\")\n"
+     ]
+    }
+   ],
    "source": [
     "def train_mlp_regressor():\n",
     "    \"\"\"\n",
